2011-12-12  Albert Chu <chu11@llnl.gov>

	* examples/: Remove directory.  Move files into contrib/libipmimonitoring.

2011-12-12  Kaiwang Chen <kaiwang.chen@gmail.com>

	* libfreeipmi/src/api/ipmi-api-util.c (_api_ipmi_cmd_post): Fix
	corner case bug.

	* contrib/pet/petalert.pl: Support workaround option.

2011-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Fix completion code check corner case with
	IPMI_FLAGS_NO_LEGAL_CHECK.

	* libfreeipmi/: Minor code cleanup.

2011-12-09  Kaiwang Chen <kaiwang.chen@gmail.com>

	* libfreeipmi/src/api/: Fix bug with IPMI_FLAGS_NO_LEGAL_CHECK
	use.
	
2011-12-08  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NO_LEGAL_CHECK flag in libfreeipmi.

2011-12-07  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support PET acknowledge option.

2011-12-07  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/: Support "malformedack" workaround option.
	
2011-12-07  Albert Chu <chu11@llnl.gov>

	* common/man/: Various additions, tweaks, and modifications.
	
2011-12-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api: Re-arch LAN code to timeout on malformed
	packets rather than do an immediate retry.

2011-12-05  Kaiwang Chen <kaiwang.chen@gmail.com>

	* ipmi-pet/src/ipmi-pet.c (_ipmi_pet_parse_trap_data): Pass raw
	localtimestamp, not locally adjusted timestamp.

2011-12-05  Albert Chu <chu11@llnl.gov>

	* common/man/: Various code re-org and cleanup.

	* Fix up manpages for easier future maintenance.

	* Remove warnings when "compiling" manpages.

	* Fix compile warnings.

	* ipmi-pet/: Adjust ipmi-pet to look more like remaining FreeIPMI
	manpages.

	* Various manpage doc updates.
	
2011-12-05  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/src/: Fix warning.
	
2011-12-02  Albert Chu <chu11@llnl.gov>

	* Update IANA Enterprise validity macro.
	
2011-12-01  Albert Chu <chu11@llnl.gov>

	* Various documentation updates.

	* Update copyright years for release in 2012.

2011-11-30  Albert Chu <chu11@llnl.gov>
