@@ -219,6 +219,7 @@ fi
 %doc %{_datadir}/doc/%{name}/freeipmi-bugs-issues-and-workarounds.txt
 %doc %{_datadir}/doc/%{name}/freeipmi-testing.txt
 %doc %{_datadir}/doc/%{name}/freeipmi-oem-documentation-requirements.txt
+%doc %{_datadir}/doc/%{name}/contrib/*
 %dir %{_datadir}/doc/%{name}
 %{_libdir}/libipmiconsole*so.*
 %{_libdir}/libfreeipmi*so.*
@@ -250,6 +251,7 @@ fi
 %{_sbindir}/ipmi-chassis
 %{_sbindir}/ipmi-chassis-config
 %{_sbindir}/ipmi-dcmi
+%{_sbindir}/ipmi-pet
 %{_sbindir}/ipmidetect
 %{_sbindir}/ipmi-detect
 %{_mandir}/man8/bmc-config.8*
@@ -285,6 +287,7 @@ fi
 %{_mandir}/man8/ipmi-chassis.8*
 %{_mandir}/man8/ipmi-chassis-config.8*
 %{_mandir}/man8/ipmi-dcmi.8*
+%{_mandir}/man8/ipmi-pet.8*
 %{_mandir}/man8/ipmidetect.8*
 %{_mandir}/man8/ipmi-detect.8*
 %{_mandir}/man5/freeipmi.conf.5*
@@ -363,6 +366,9 @@ fi
 %{_mandir}/man8/ipmidetectd.8*
 
 %changelog
+* Mon Dec 12 2011 Albert Chu <chu11@llnl.gov> 1.1.1
+- Add contrib and ipmi-pet files.
+
 * Wed Jun 29 2011 Albert Chu <chu11@llnl.gov> 1.0.4
 - Add pkgconfig files.
 
